--- a/style.css/style.scss
+++ b/style.css/style.scss
@@ -307,27 +307,7 @@ textarea.input {
   align-items: center;
   justify-content: center;
   position: relative;
-  @media (max-width: $md4) {
-    justify-content: flex-end;
-  }
   &__menu {
-    position: relative;
-    z-index: 3;
-    @media (max-width: $md4) {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      z-index: 2;
-      top: -100%;
-      left: 0;
-      padding: 80px 20px 20px;
-      overflow: auto;
-      transition: all 0.6s ease;
-      &.active {
-        top: 0;
-      }
-    }
   }
 
   &__list {
@@ -335,19 +315,22 @@ textarea.input {
     align-items: center;
     text-align: center;
     justify-content: center;
-    @media (max-width: $md4) {
-      flex-direction: column;
-    }
+    flex-wrap: wrap;
+    padding: 10px 0;
   }
 
   &__item {
     &:not(:last-child) {
       margin-right: 50px;
+      @media (max-width: $md3) {
+        margin-right: 25px;
+      }
     }
-    @media (max-width: $md4) {
+    @media (max-width: 420px) {
+      flex: 0 1 50%;
+      margin-bottom: 10px;
       &:not(:last-child) {
         margin-right: 0;
-        margin-bottom: 30px;
       }
     }
   }
@@ -365,50 +348,6 @@ textarea.input {
     }
     &:hover {
       color: #ada074;
-    }
-    @media (max-width: $md4) {
-      font-size: 30px;
-    }
-  }
-  &__burger {
-    display: none;
-    @media (max-width: $md4) {
-      display: block;
-      width: 30px;
-      height: 18px;
-      position: relative;
-      z-index: 3;
-      span {
-        position: absolute;
-        top: 8px;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: #000;
-        transition: all 0.3s ease;
-        &:nth-child(1) {
-          top: 0;
-        }
-        &:nth-child(3) {
-          top: auto;
-          bottom: 0;
-        }
-      }
-      &.active {
-        span {
-          &:nth-child(1) {
-            top: 8px;
-            transform: rotate(45deg);
-          }
-          &:nth-child(2) {
-            transform: scale(0);
-          }
-          &:nth-child(3) {
-            bottom: 8px;
-            transform: rotate(-45deg);
-          }
-        }
-      }
     }
   }
 }
